# opentdf-rs

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  INTEROPERABILITY.md  INTEROPERABILITY_TEST_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  NANOTDF_PAYLOAD_LENGTH_BUG_FIX.md  README.md  REQUIREMENTS.md  TESTS.md  ZTDF_JSON.md  deny.toml  test_kas_real.sh
.arkavo/memory_server/: memories.db
.arkavo/prompts/: README.md
.claude/commands/: pr-review.md
.github/workflows/: bdd-mcp-tests.yml  feature.yaml  release.yaml  rust.yaml  test-bdd.yaml  wasm-release.yml  xtest.yml
benches/: memory_builder.rs  pdp_check.rs
crates/crypto/: Cargo.toml  README.md
crates/crypto/src/: helpers.rs  hmac.rs  lib.rs  types.rs
crates/crypto/src/kem/: ec.rs  mod.rs  pqc.rs  rsa.rs
crates/crypto/src/tdf/: encryption.rs  mod.rs  nanotdf.rs  nanotdf_collection.rs  nanotdf_crypto.rs  nanotdf_crypto_mbedtls.rs
crates/kas/: Cargo.toml  README.md
crates/kas/src/: error.rs  lib.rs  rewrap.rs  salt.rs  types.rs
crates/kas/src/unwrap/: ec_unwrap.rs  rsa_unwrap.rs
crates/kas_server/: Cargo.toml  README.md
crates/kas_server/src/: keypair.rs  lib.rs  rewrap.rs  salt.rs  types.rs
crates/kas_server/src/unwrap/: mod.rs  rsa_unwrap.rs
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/protocol/: Cargo.toml  README.md
crates/protocol/src/: kas.rs  lib.rs  manifest.rs
crates/protocol/src/binary/: mod.rs  traits.rs
crates/protocol/src/nanotdf/: collection.rs  header.rs  mod.rs  policy.rs  resource_locator.rs
crates/wasm/: .gitignore  .npmrc  BROWSER_TEST_INSTRUCTIONS.md  Cargo.toml  NPM_PUBLISHING.md  README.md  SERVER_TESTING_RESULTS.md  TESTING.md  package.json  server.js  test-browser.html  test-node.js  test-server.sh  verify-format.js
crates/wasm/src/: kas.rs  lib.rs  webcrypto.rs
docs/: BENCHMARKS.md  NANOTDF.md  NANOTDF_CRITICAL_BUG.md  NANOTDF_CROSS_PLATFORM_SUCCESS.md  NANOTDF_CROSS_PLATFORM_TESTING.md  NANOTDF_KAS_REWRAP.md  NANOTDF_L1L_V12_IMPLEMENTATION.md  NANOTDF_MIGRATION.md  NANOTDF_NEXT_STEPS.md  NANOTDF_OTDFCTL_DEBUG.md  NANOTDF_STATUS_FINAL.md  NANOTDF_TESTING_SUMMARY.md  SDK_COMPARISON.md
docs/superpowers/plans/: 2026-05-28-connectrpc-kas-migration.md
docs/superpowers/specs/: 2026-05-28-connectrpc-kas-migration-design.md
examples/: create_nanotdf.rs  create_tdf_for_kas.rs  create_tdf_platform.rs  create_tdf_with_kas.rs  cross_sdk_test.rs  decrypt_nanotdf.rs  decrypt_otdfctl_nanotdf.rs  inspect_tdf.rs  jsonrpc_example.rs  jwt_helper.rs  kas_decrypt.rs  kas_sanity_test.rs  mock_kas_server.rs  nanotdf_compressed_key.rs  nanotdf_embedded_policy.rs  nanotdf_with_kas_key.rs  pep_check.rs  simple_file_encryption.rs  simple_tdf.rs  tdf_cbor_example.rs  wasi_tdf_example.rs  xtest_cli.rs
src/: archive.rs  crypto.rs  error.rs  fqn.rs  jsonrpc.rs  kas.rs  kas_discovery.rs  kas_key.rs  lib.rs  manifest.rs  policy.rs  prelude.rs  tdf.rs  tdf_cbor.rs
src/pdp/: engine.rs  flatten.rs  identifier.rs  mod.rs  subject_mapping.rs  tests.rs  types.rs  validators.rs
tests/: abac_integration.rs  integration.rs  kas_integration.rs  kas_mock.rs  nanotdf_collection_integration.rs  nanotdf_integration.rs  platform_integration.rs
tests/common/: mod.rs
tests/data/: sensitive.txt.tdf  test.tdf
tests/wasi/: Cargo.toml  README.md
tests/wasi/src/: main.rs
tools/: AUDIT_IMPLEMENTATION.md  CONFIGURATION.md  DOCS.md  ERROR-HANDLING.md  README-MCP-INTEGRATION.md  README.md  audit-guide.md  audit-logging-test.js  claude-mcp-client.js  claude-mcp-test.js  generate-bdd-report.js  list-attributes.js  mcp-abac-test.js  mcp_client.js  register-tools.js  run-abac-test.sh  sample.tdf  test-abac-access.js  test-abac-mcp.js  test-attributes.js  test-content-format.js  test-content-params.js  test-mcp-direct.js  test-mcp.js  test-tool-calls.js
tools/mcp-server/: Cargo.toml
tools/mcp-server/src/: main.rs
tools/test-scripts/: http-test-abac.js  test-abac-access.js  test-abac-mcp.js
wasi-test/: README.md
