[package]
name = "opentdf"
version.workspace = true
edition = "2021"
description = "Rust implementation of OpenTDF (Trusted Data Format)"
license = "Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[dependencies]
# New modular crates
opentdf-protocol = { path = "crates/protocol" }
opentdf-crypto = { path = "crates/crypto", default-features = false }

# Core dependencies
zip = { version = "2.2", default-features = false, features = ["deflate"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
aes-gcm = "0.10"

# KAS client dependencies (simplified, crypto moved to opentdf-crypto)
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
jsonwebtoken = { version = "9", optional = true }
rand = { version = "0.8", optional = true }
# RSA operations use aws-lc-rs (constant-time, FIPS validated)
aws-lc-rs = { version = "1.15", optional = true }
pem = { version = "3.0", optional = true }

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
criterion = "0.5"
# Required for jwt_helper.rs example
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"

[workspace]
members = ["crates/protocol", "crates/crypto", "crates/wasm"]

[workspace.package]
version = "0.8.0"

[features]
default = ["kas-client"]

# MCP (Model Context Protocol) server support
mcp = []

# KAS (Key Access Service) client with aws-lc-rs backend (recommended)
# Uses constant-time RSA operations, FIPS validated
kas-client = ["_kas-client-base", "dep:aws-lc-rs", "dep:pem", "opentdf-crypto/aws-lc-provider"]

# KAS client with pure Rust backend (RustCrypto)
# WARNING: Has RUSTSEC-2023-0071 timing vulnerability - only use if aws-lc-rs cannot be built
kas-client-rustcrypto = ["_kas-client-base", "opentdf-crypto/rustcrypto-provider"]

# Internal: shared KAS client dependencies (do not use directly)
_kas-client-base = ["dep:reqwest", "dep:tokio", "dep:jsonwebtoken", "dep:rand", "opentdf-crypto/kem-rsa", "opentdf-crypto/kem-ec", "rustls-tls"]

# TLS backend selection for reqwest
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]

# Deprecated aliases for backwards compatibility
kas = ["kas-client"]
rustcrypto-rsa = ["opentdf-crypto/rustcrypto-provider"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[[example]]
name = "kas_decrypt"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_with_kas"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_platform"
required-features = ["kas-client"]

[[example]]
name = "jwt_helper"
required-features = ["kas-client"]

[[bench]]
name = "memory_builder"
harness = false
