[package]
name = "opentdf"
version.workspace = true
edition = "2024"
description = "Rust implementation of OpenTDF (Trusted Data Format)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[dependencies]
# New modular crates
opentdf-protocol = { path = "crates/protocol" }
opentdf-crypto = { path = "crates/crypto", default-features = false }

# Core dependencies (using workspace versions)
zip = { version = "2.2", default-features = false, features = ["deflate"] }
serde_json.workspace = true
serde.workspace = true
base64.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
aes-gcm.workspace = true

# KAS client dependencies (simplified, crypto moved to opentdf-crypto)
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
jsonwebtoken = { version = "9", optional = true }
rand = { workspace = true, optional = true }
# RSA operations use aws-lc-rs (constant-time, FIPS validated)
aws-lc-rs = { version = "1.15", optional = true }
pem = { version = "3.0", optional = true }

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
criterion = "0.5"
# Required for jwt_helper.rs example
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"

[workspace]
members = ["crates/protocol", "crates/crypto", "crates/wasm"]

[workspace.package]
version = "0.9.0"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive", "alloc"] }

# EC curves
p256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
p521 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
k256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = ["kas-client"]

# MCP (Model Context Protocol) server support
mcp = []

# KAS (Key Access Service) client with aws-lc-rs backend (recommended)
# Uses constant-time RSA operations, FIPS validated
kas-client = ["_kas-client-base", "dep:aws-lc-rs", "dep:pem", "opentdf-crypto/aws-lc-provider"]

# KAS client with pure Rust backend (RustCrypto)
# WARNING: Has RUSTSEC-2023-0071 timing vulnerability - only use if aws-lc-rs cannot be built
kas-client-rustcrypto = ["_kas-client-base", "opentdf-crypto/rustcrypto-provider"]

# Internal: shared KAS client dependencies (do not use directly)
_kas-client-base = ["dep:reqwest", "dep:tokio", "dep:jsonwebtoken", "dep:rand", "opentdf-crypto/kem-rsa", "opentdf-crypto/kem-ec", "rustls-tls"]

# TLS backend selection for reqwest
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]

# Deprecated aliases for backwards compatibility
kas = ["kas-client"]
rustcrypto-rsa = ["opentdf-crypto/rustcrypto-provider"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[[example]]
name = "kas_decrypt"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_with_kas"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_platform"
required-features = ["kas-client"]

[[example]]
name = "jwt_helper"
required-features = ["kas-client"]

[[bench]]
name = "memory_builder"
harness = false
