[package]
name = "opentdf"
version.workspace = true
edition = "2024"
rust-version = "1.91"
description = "Rust implementation of OpenTDF (Trusted Data Format)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"
authors = ["Arkavo LLC <info@arkavo.com>"]
documentation = "https://docs.rs/opentdf"
homepage = "https://github.com/arkavo-org/opentdf-rs"
keywords = ["opentdf", "tdf", "encryption", "data-protection", "zero-trust"]
categories = ["cryptography", "encoding", "parser-implementations"]
readme = "README.md"

[dependencies]
# New modular crates
opentdf-protocol = { path = "crates/protocol", version = "0.11.0" }
opentdf-crypto = { path = "crates/crypto", version = "0.11.0", default-features = false }

# Core dependencies (using workspace versions)
zip = { version = "2.2", default-features = false, features = ["deflate"] }
serde_json.workspace = true
serde.workspace = true
base64.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
aes-gcm.workspace = true

# KAS client dependencies (simplified, crypto moved to opentdf-crypto)
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
jsonwebtoken = { version = "10", optional = true, features = ["aws_lc_rs"] }
rand = { workspace = true, optional = true }
# RSA operations use aws-lc-rs (constant-time, FIPS validated)
aws-lc-rs = { version = "1.15", optional = true }
pem = { version = "3.0", optional = true }

# CBOR encoding for TDF-CBOR format (optional)
ciborium = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.14"
mockito = "1.6"
criterion = "0.5"
# Required for jwt_helper.rs example
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
rand = "0.8"
# Required for mock KAS server and xtest CLI
axum = "0.8"
tower = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
# KAS crate for server-side crypto operations in mock_kas_server (EC only, RSA uses aws-lc-rs)
opentdf-kas = { path = "crates/kas" }
# Additional crypto dependencies for mock_kas_server
hkdf = "0.12"
sha2 = "0.10"

[workspace]
members = ["crates/protocol", "crates/crypto", "crates/kas", "crates/wasm"]

[workspace.package]
version = "0.11.0"

[workspace.dependencies]
# Core serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Encoding
base64 = "0.22"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Identifiers
uuid = { version = "1.11", features = ["v4", "serde"] }

# Cryptography
aes-gcm = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"
zeroize = { version = "1.8", features = ["derive", "alloc"] }

# Key encoding
pkcs8 = { version = "0.10", features = ["pem"] }

# EC curves
p256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
p521 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }
k256 = { version = "0.13", features = ["ecdsa", "pem", "ecdh"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }

[features]
default = ["kas-client"]

# KAS (Key Access Service) client with aws-lc-rs backend (recommended)
# Uses constant-time RSA operations, FIPS validated
kas-client = ["_kas-client-base", "dep:aws-lc-rs", "dep:pem", "opentdf-crypto/aws-lc-provider"]

# KAS client with pure Rust backend (RustCrypto)
# WARNING: Has RUSTSEC-2023-0071 timing vulnerability - only use if aws-lc-rs cannot be built
kas-client-rustcrypto = ["_kas-client-base", "opentdf-crypto/rustcrypto-provider"]

# Internal: shared KAS client dependencies (do not use directly)
_kas-client-base = ["dep:reqwest", "dep:tokio", "dep:jsonwebtoken", "dep:rand", "opentdf-crypto/kem-rsa", "opentdf-crypto/kem-ec", "rustls-tls"]

# TLS backend selection for reqwest
rustls-tls = ["reqwest?/rustls-tls"]
native-tls = ["reqwest?/native-tls"]

# TDF-CBOR format support (optional)
cbor = ["dep:ciborium"]

# Deprecated aliases for backwards compatibility
kas = ["kas-client"]
rustcrypto-rsa = ["opentdf-crypto/rustcrypto-provider"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[[example]]
name = "kas_decrypt"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_with_kas"
required-features = ["kas-client"]

[[example]]
name = "create_tdf_platform"
required-features = ["kas-client"]

[[example]]
name = "jwt_helper"
required-features = ["kas-client"]

[[example]]
name = "tdf_cbor_example"
required-features = ["cbor"]

[[example]]
name = "mock_kas_server"
required-features = ["kas-client", "cbor"]

[[example]]
name = "xtest_cli"
required-features = ["kas-client", "cbor"]

[[bench]]
name = "memory_builder"
harness = false
