[package]
name = "opentdf-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Model Context Protocol (MCP) server for OpenTDF-RS"
license = "Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[dependencies]
opentdf = { path = "../.." }
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
base64 = "0.22.1"
thiserror = "1.0.67"