[package]
name = "opentdf-protocol"
version = "0.5.0"
edition = "2021"
description = "OpenTDF protocol types and structures (no crypto, no I/O)"
license = "Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# UUID with conditional features for WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.11", features = ["v4", "serde"] }
