[package]
name = "opentdf-protocol"
version.workspace = true
edition = "2024"
description = "OpenTDF protocol types and structures (no crypto, no I/O)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
thiserror.workspace = true

# UUID with conditional features for WASM support
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
uuid = { version = "1.11", features = ["v4", "serde"] }
