[package]
name = "opentdf-wasm"
version = "0.3.0"
edition = "2021"
description = "WebAssembly bindings for OpenTDF (Trusted Data Format)"
license = "Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opentdf = { path = "../..", version = "0.3.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
base64 = "0.22"
chrono = { version = "0.4.35", features = ["serde", "wasmbind"] }
uuid = { version = "1.8.0", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
