[package]
name = "opentdf-wasm"
version.workspace = true
edition = "2021"
description = "WebAssembly bindings for OpenTDF (Trusted Data Format)"
license = "Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt for production builds (20-30% size reduction)
# This optimizes the WASM binary but increases build time
wasm-opt = ["-O3", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
# Disable wasm-opt for development (faster builds)
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opentdf = { path = "../..", default-features = false }
opentdf-protocol = { path = "../protocol", version = "0.5.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# KAS (Key Access Service) dependencies
reqwest = { version = "0.12", default-features = false, features = ["json"] }
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
pkcs8 = { version = "0.10", features = ["pem"] }
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "ResponseType",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
