[package]
name = "opentdf-wasm"
version.workspace = true
edition = "2024"
description = "WebAssembly bindings for OpenTDF (Trusted Data Format)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arkavo-org/opentdf-rs"
authors = ["Arkavo LLC <info@arkavo.com>"]
documentation = "https://docs.rs/opentdf-wasm"
homepage = "https://github.com/arkavo-org/opentdf-rs"
keywords = ["opentdf", "tdf", "wasm", "webassembly", "browser"]
categories = ["wasm", "cryptography", "web-programming"]
readme = "README.md"

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt for production builds (20-30% size reduction)
# This optimizes the WASM binary but increases build time
wasm-opt = ["-O3", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
# Disable wasm-opt for development (faster builds)
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
opentdf = { path = "../..", version = "0.9.0", default-features = false }
opentdf-protocol = { path = "../protocol", version = "0.9.0" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
console_error_panic_hook = "0.1"
base64.workspace = true
# Chrono needs wasmbind feature for WASM Date interop
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
# UUID needs js feature for WASM random generation
uuid = { version = "1.11", features = ["v4", "serde", "js"] }
getrandom = { version = "0.2", features = ["js"] }

# KAS (Key Access Service) dependencies
reqwest.workspace = true
# Note: RSA operations use WebCrypto (SubtleCrypto) - no Rust RSA crate needed
# This eliminates RUSTSEC-2023-0071 vulnerability exposure in WASM
p256.workspace = true
pkcs8.workspace = true
sha1.workspace = true
sha2.workspace = true
hmac.workspace = true
hkdf.workspace = true
rand.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "ResponseType",
    # WebCrypto features for RSA-OAEP operations
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "CryptoKeyPair",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"
